# indie_studio

./: .gitignore  CMakeLists.txt  README.md  ia.txt
Irrlicht/source/: C3DSMeshFileLoader.d  CAnimatedMeshHalfLife.d  CAnimatedMeshMD2.d  CAnimatedMeshMD3.d  CAnimatedMeshSceneNode.d  CAttributes.d  CB3DMeshFileLoader.d  CBSPMeshFileLoader.d  CBillboardSceneNode.d  CBoneSceneNode.d  CBurningShader_Raster_Reference.d  CCSMLoader.d  CCameraSceneNode.d  CColladaFileLoader.d  CColladaMeshWriter.d  CColorConverter.d  CCubeSceneNode.d  CD3D8Driver.d  CD3D8NormalMapRenderer.d  CD3D8ParallaxMapRenderer.d  CD3D8ShaderMaterialRenderer.d  CD3D8Texture.d  CD3D9Driver.d  CD3D9HLSLMaterialRenderer.d  CD3D9NormalMapRenderer.d  CD3D9ParallaxMapRenderer.d  CD3D9ShaderMaterialRenderer.d  CD3D9Texture.d  CDMFLoader.d  CDefaultGUIElementFactory.d  CDefaultSceneNodeAnimatorFactory.d  CDefaultSceneNodeFactory.d  CDepthBuffer.d  CDummyTransformationSceneNode.d  CEmptySceneNode.d  CFPSCounter.d  CFileList.d  CFileSystem.d  CGUIButton.d  CGUICheckBox.d  (+177 more)
Irrlicht/source/aesGladman/: aescrypt.d  aeskey.d  aestab.d  fileenc.d  sha1.d  sha2.d
assets/maps/: map2
assets/menus/font/: font_indie.xml
assets/model3D/Chess Bonus/: Free_Chest_3DS.rar  Free_Chest_FBX.rar  Free_Chest_MAX.rar  Free_Chest_OBJ.rar  Free_Chest_TEXTURE.rar
assets/model3D/Chess Bonus/Free_Chest_3DS/Free_Chest_3DS/: ARK_FREE_CHEST.3ds
assets/model3D/Chess Bonus/Free_Chest_MAX/Free_Chest_MAX/: ARK_FREE_CHEST.max
assets/model3D/Cube/: Cube_maya2014.mb
assets/model3D/Dojo/: ADS_dojoREADME.txt
assets/model3D/fire/: MAXFILES.TXT
assets/model3D/wall breakable/: Ruins.OBJ.rar  ruins.FBX.rar
assets/model3D/wall unbreakable/: SciFi_Wall_3ds.rar  SciFi_Wall_fbx.rar  SciFi_Wall_texture.rar
include/: Audio.hpp  Bomb.hpp  BombUp.hpp  BreakableBlock.hpp  Config.hpp  EventManager.hpp  Explosion.hpp  FireUp.hpp  Floor.hpp  Game.hpp  Graphic.hpp  IBlock.hpp  IBonus.hpp  IEntity.hpp  IMenu.hpp  IMyEventReceiver.hpp  IPlayer.hpp  Ia.hpp  MainMenu.hpp  Map.hpp  MapGenerator.hpp  Match.hpp  Player.hpp  PlayerConfig.hpp  SpeedUp.hpp  UnbreakableBlock.hpp  WallPass.hpp
include/Menus/: Button.hpp  Corners.hpp  Definer.hpp  MenuAudio.hpp  MenuControls.hpp  MenuInGame.hpp  MenuLobby.hpp  MenuMain.hpp  MenuNewGame.hpp  MenuSettings.hpp  MenuVideo.hpp
source/: Audio.cpp  Bomb.cpp  BombUp.cpp  BreakableBlock.cpp  Config.cpp  EventManager.cpp  Explosion.cpp  FireUp.cpp  Floor.cpp  Game.cpp  Graphic.cpp  IBlock.cpp  IBonus.cpp  IEntity.cpp  IMenu.cpp  IMyEventReceiver.cpp  IPlayer.cpp  Ia.cpp  Map.cpp  MapGenerator.cpp  Match.cpp  Player.cpp  PlayerConfig.cpp  SpeedUp.cpp  UnbreakableBlock.cpp  WallPass.cpp  main.cpp
source/Menus/: Button.cpp  Corners.cpp  MenuAudio.cpp  MenuControls.cpp  MenuInGame.cpp  MenuLobby.cpp  MenuMain.cpp  MenuNewGame.cpp  MenuSettings.cpp  MenuVideo.cpp
testdir/: Ia.cpp  Ia.hpp  PlayerCurse.hpp  a.out  basic.cpp  check.cpp  classic.txt  dmap.cpp  game_ncurses.cpp  header_curses.hpp  main.cpp  mapgen.hpp  my_ncurses.cpp  other.txt  path.cpp
